<resources>
    <string name="app_name">CFB Coach</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_team_strategy">Set Team Strategy</string>
    <string name="action_team_lineup">Set Team Lineup</string>
    <string name="action_league_history">League History</string>
    <string name="action_team_history">My Team History</string>
    <string name="action_rankings">Team Rankings</string>
    <string name="action_heisman">Player of the Year</string>
    <string name="action_news_stories">News Stories</string>
    <string name="action_bowlgame_watch">Bowl Games</string>
    <string name="action_ccg_watch">Conf Championships</string>
    <string name="action_ccg_bowl_watch">CCGs / Bowl Games</string>
    <string name="action_save_league">Save League</string>
    <string name="action_return_main_menu">Return to Main Menu</string>
    <string name="action_change_team_name">Settings/Change Name</string>
    <string name="title_activity_recruiting">RecruitingActivity</string>
    <string name="league_player_names">
        Tim,
        James,
        John,
        Robert,
        Michael,
        William,
        David,
        Richard,
        Charles,
        Joseph,
        Thomas,
        Daniel,
        Paul,
        Mark,
        Donald,
        George,
        Steven,
        Edward,
        Brian,
        Ronald,
        Anthony,
        Kevin,
        Jason,
        Johnson,
        Matthew,
        Jose,
        Larry,
        Frank,
        Scott,
        Eric,
        Andrew,
        Raymond,
        Joshua,
        Jerry,
        Dennis,
        Walter,
        Patrick,
        Peter,
        Harold,
        Douglas,
        Henry,
        Carl,
        Arthur,
        Ryan,
        Joe,
        Juan,
        Jack,
        Albert,
        Justin,
        Terry,
        Gerald,
        Samuel,
        Ralph,
        Roy,
        Ben,
        Bruce,
        Adam,
        Harry,
        Fred,
        Wayne,
        Billy,
        Jeremy,
        Aaron,
        Carlos,
        Russell,
        Bobby,
        Alan,
        Jimmy,
        Lebron,
        Kobe,
        Brady,
        Manning,
        Peyton,
        Eli,
        Beckham,
        Draymond,
        Jordan,
        Derrick,
        Dirk,
        Tim,
        Adrian,
        Ha-Ha,
        Hunter,
        Dick,
        Blewitt,
        Thor,
        Andre,
        Benton,
        Alwan,
        Carnell,
        Clayton,
        Clifton,
        Dajon,
        Damon,
        Damarco,
        Damon,
        Cordell,
        Darik,
        Delroy,
        Deon,
        Dequain,
        Dexter,
        Dontrell,
        Hakeem,
        Jamaar,
        Jahquil,
        Jarvis,
        Javan,
        Kaynard,
        Kendrick,
        Keon,
        Lamar,
        Lavon,
        Lucius,
        Luther,
        Malik,
        Marvin,
        Odell,
        Omari,
        Omarr,
        Orlando,
        Otis,
        Perry,
        Quinton,
        Randall,
        Reggie,
        Rodell,
        Rondall,
        Rufus,
        Shawnte,
        Spike,
        Talin,
        Trayvon,
        Tupac,
        Tre,
        Tyree,
        Tyrell,
        Tyronne,
        Umar,
        Vashan,
        Wendell,
        Wardell,
        Theo,
        Isaac,
        Squires,
        Lee
<<<<<<< HEAD
    </string>
    <string name="league_player_first_names">
        Tim,
        James,
        John,
        Robert,
        Michael,
        William,
        David,
        Richard,
        Charles,
        Joseph,
        Thomas,
        Daniel,
        Paul,
        Mark,
        Donald,
        George,
        Steven,
        Edward,
        Brian,
        Ronald,
        Anthony,
        Kevin,
        Jason,
        Johnson,
        Matthew,
        Jose,
        Larry,
        Frank,
        Scott,
        Eric,
        Andrew,
        Raymond,
        Joshua,
        Jerry,
        Dennis,
        Walter,
        Patrick,
        Peter,
        Harold,
        Douglas,
        Henry,
        Carl,
        Arthur,
        Ryan,
        Joe,
        Juan,
        Jack,
        Albert,
        Justin,
        Terry,
        Gerald,
        Samuel,
        Ralph,
        Roy,
        Ben,
        Bruce,
        Adam,
        Harry,
        Fred,
        Wayne,
        Billy,
        Jeremy,
        Aaron,
        Carlos,
        Russell,
        Bobby,
        Alan,
        Jimmy,
        Lebron,
        Kobe,
        Brady,
        Manning,
        Peyton,
        Eli,
        Beckham,
        Draymond,
        Jordan,
        Derrick,
        Dirk,
        Tim,
        Adrian,
        Ha-Ha,
        Hunter,
        Dick,
        Blewitt,
        Thor,
        Andre,
        Benton,
        Alwan,
        Carnell,
        Clayton,
        Clifton,
        Dajon,
        Damon,
        Damarco,
        Damon,
        Cordell,
        Darik,
        Delroy,
        Deon,
        Dequain,
        Dexter,
        Dontrell,
        Hakeem,
        Jamaar,
        Jahquil,
        Jarvis,
        Javan,
        Kaynard,
        Kendrick,
        Keon,
        Lamar,
        Lavon,
        Lucius,
        Luther,
        Malik,
        Marvin,
        Odell,
        Omari,
        Omarr,
        Orlando,
        Otis,
        Perry,
        Quinton,
        Randall,
        Reggie,
        Rodell,
        Rondall,
        Rufus,
        Shawnte,
        Spike,
        Talin,
        Trayvon,
        Tupac,
        Tre,
        Tyree,
        Tyrell,
        Tyronne,
        Umar,
        Vashan,
        Wendell,
        Wardell,
        Theo,
        Isaac,
        Squires,
        Cam,
        Ryan,
        Marqise,
        Bryce,
        Ryder,
        Juju,
        Xavier,
        Cody,
        Brent,
        Keyshawn,
        Buck,
        Silas,
        Josh,
        Drew,
        Maurice
    </string>
    <string name="league_player_last_names">
        Tim,
        James,
        William,
        David,
        Richard,
        Charles,
        Joseph,
        Thomas,
        Daniel,
        Paul,
        Mark,
        Donald,
        George,
        Steven,
        Edward,
        Brian,
        Ronald,
        Anthony,
        Kevin,
        Jason,
        Johnson,
        Matthew,
        Jose,
        Larry,
        Frank,
        Scott,
        Eric,
        Andrew,
        Raymond,
        Joshua,
        Jerry,
        Dennis,
        Walter,
        Patrick,
        Peter,
        Harold,
        Douglas,
        Henry,
        Carl,
        Arthur,
        Ryan,
        Joe,
        Juan,
        Jack,
        Albert,
        Justin,
        Terry,
        Gerald,
        Samuel,
        Ralph,
        Roy,
        Ben,
        Bruce,
        Adam,
        Harry,
        Fred,
        Wayne,
        Billy,
        Jeremy,
        Aaron,
        Carlos,
        Russell,
        Bobby,
        Alan,
        Jimmy,
        Lebron,
        Kobe,
        Brady,
        Manning,
        Peyton,
        Eli,
        Beckham,
        Draymond,
        Jordan,
        Derrick,
        Dirk,
        Tim,
        Adrian,
        Ha-Ha,
        Hunter,
        Dick,
        Blewitt,
        Thor,
        Andre,
        Benton,
        Alwan,
        Carnell,
        Clayton,
        Clifton,
        Dajon,
        Damon,
        Damarco,
        Damon,
        Cordell,
        Darik,
        Delroy,
        Deon,
        Dequain,
        Dexter,
        Dontrell,
        Hakeem,
        Jamaar,
        Jahquil,
        Jarvis,
        Javan,
        Kaynard,
        Kendrick,
        Keon,
        Lamar,
        Lavon,
        Lucius,
        Luther,
        Malik,
        Marvin,
        Odell,
        Omari,
        Orlando,
        Otis,
        Perry,
        Quinton,
        Randall,
        Reggie,
        Rodell,
        Rondall,
        Rufus,
        Shawnte,
        Spike,
        Talin,
        Trayvon,
        Tupac,
        Tre,
        Tyree,
        Tyrell,
        Tyronne,
        Umar,
        Vashan,
        Wendell,
        Wardell,
        Theo,
        Isaac,
        Squires,
        Shaw,
        Grimble,
        Brown,
        Kessler,
        Doughty,
        Richardson,
        Malik
=======
>>>>>>> refs/remotes/jonesguy14/master
    </string>
    <string name="tutBasics">
        In Football Coach, you take the role of a newly hired coach at your college of choice.
        As coach, it will be your responsibility to manage your team\'s strategy, simulate through seasons, recruit new players, and above all, win championships.
    </string>
    <string name="tutPlayingSeason">
        Your team will play 12 games in the regular season, which consist of playing all 9 of your conference opponents once and three out of conference games.
        By navigating to the GAMES tab, you can see exactly what your team\'s schedule is.
        And by clicking on each game, you can see a scouting report of the two teams (if the game has yet to be played), or a summary of the game (if it was already played).\n\n
        The most important game of the regular season is your rivalry game, which you gain prestige if won or lose prestige if lost.
        At the end of the regular season, the Conference Championship is played between the two teams with the best in-conference record.
        If two teams have the same record, a head-to-head tiebreaker is used. If three or more teams have the same record, the one with the highest poll ranking is chosen.
        After the Conference Championships, Bowl Games are played.\n\n
        Only the top 16 teams get chosen for a bowl, with the most important being the National Semifinals between the #1 and #4 team, and the #2 and #3 team.
        The winner of these two games advance to the National Championship where an undisputed champion is crowned.\n\n
        After the season, your team will have gained or lost prestige based on their results versus their expectations, and you move onto recruiting.
    </string>
    <string name="tutRankings">
        As your team plays through the season, it will be evaluated by pollsters who determine how good (or bad) your team is compared to others.
        This "Poll Ranking" is determined by wins, margin of victory, strength of schedule, and more, and has a big impact on how your season will play out,
        as it determines who gets into a bowl game and the semifinals.\n\nMany statistics are kept track of during the season, such as Yards Per Game, Opposing Points Per Game,
        Pass Yards Per Game, Turnover Differential and more. You can view all these statistics, as well as your team\'s ranking in each one, by navigating to the "STATS" tab.
    </string>
</resources>