<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.achijones.footballcoach.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_league_history"
        android:orderInCategory="100"
        android:title="@string/action_league_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_team_history"
        android:orderInCategory="100"
        android:title="@string/action_team_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rankings"
        android:orderInCategory="100"
        android:title="@string/action_rankings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bowlgame_watch"
        android:orderInCategory="100"
        android:title="@string/action_bowlgame_watch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ccg_watch"
        android:orderInCategory="100"
        android:title="@string/action_ccg_watch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_heisman"
        android:orderInCategory="100"
        android:title="@string/action_heisman"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_news_stories"
        android:orderInCategory="100"
        android:title="@string/action_news_stories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_league"
        android:orderInCategory="100"
        android:title="@string/action_save_league"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_return_main_menu"
        android:orderInCategory="100"
        android:title="@string/action_return_main_menu"
        app:showAsAction="never" />
</menu>